--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "stripe": "^11.14.0",
+    "typewriter-effect": "^2.19.0",
     "validator": "^13.9.0"
   }
 }
