--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manufacturer-app-server",
+  "name": "vedic-backend-new-2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
