--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.9.1",
     "stripe": "^11.14.0",
     "typewriter-effect": "^2.19.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.9.0"
   }
 }
